remove old comments

--- a/index.html
+++ b/index.html
@@ -223,12 +223,7 @@
     <div>
       <ul>
         <li>Drag tiles into the play area</li>
-        <li>Click to rotate clockwise, Right click to rotate counter-clockwise
-          <!-- <ul>
-            li><strike>Works best with Firefox. On Chrome based browsers, the tile rotation does not get applied to the dragged image.</strike></li
-            <li>Fixed drag image rotation issue with certain browsers. Animation for rotation event is now based on layer opacity.</li>
-          </ul> -->
-        </li>
+        <li>Click to rotate clockwise, Right click to rotate counter-clockwise</li>
         <li>Incorrectly placed tile will be tinted red.</li>
         <li>Drag tile over existing tiles to swap places (swapped tile gets bumped back to the tray)</li>
         <li>Confirmation will display before reloading the game or navigating away if tiles are in play.</li>
