--- a/hartchart.html
+++ b/hartchart.html
@@ -369,7 +369,7 @@
       let rngseed = pattern ?? Math.floor(Math.random() * 100000000);
       let rng = random(rngseed);
 
-      main.innerHTML = "";
+      main.replaceChildren(); //.inner Text = "";
       let lastchar = "";
       for (let x = 1; x <= 10; x++) {
         for (let y = 1; y <= 10; y++) {
@@ -391,8 +391,7 @@
       url.replace(/[\?#&].*$/, "");
       let qrstring = url + "#" + rngseed;
       // console.log(qrstring);
-      qrplace.innerHTML = "";
-      qrplace.append(getqr(qrstring, "_partner"));
+      qrplace.replaceChildren(getqr(qrstring, "_partner"));
       // }
 
       hartcode();
