Print in landscape

--- a/colortouch.html
+++ b/colortouch.html
@@ -131,8 +131,11 @@
 
 
     @media print {
+      @page {
+        size: landscape;
+      }
+      
       .icon {
-
         path,
         circle {
           stroke: black;
