--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 
   <style>
     #abouttext {
-      font-size: 18pt;
+      font-size: min(18pt,5vw);
       margin: 0 1em;
     }
-
 
     h2,
     h3 {
@@ -40,6 +39,10 @@
     #homelogo {
       width: 1.5em;
       height: 1.5em;
+
+      & img {
+        height: 100%;
+      }
     }
 
     ul {
@@ -69,6 +72,32 @@
       pointer-events: all;
       ;
     }
+
+    #toc {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin-bottom:0.5em;
+
+      & li {
+        display: block;
+        width: 50%;
+        min-width: 15em;
+        ;
+      }
+
+      & img {
+        height: 1em;
+        margin-right: 0.25em;
+      }
+    }
+
+    .legend {
+      margin:0.5em 1em;
+    }
+    h4 {
+      margin-bottom:0.5em;
+    }
   </style>
 </head>
 
@@ -88,42 +117,36 @@
 
     </div>
     <hr />
-    Contents:
+    <h4>Contents</h4>
+    <div class="legend">(p = printable ; i = interactive)</div>
 
     <ul id="toc"></ul>
-    
+
     <hr />
 
-    <h3 id="cp" data-p="p"><a href="cpsaccades.html">CP Saccades / Space Fixator / Red-Green delete</a></h3>
+    <h3 id="cpsaccades" class="printable interactive"><a href="cpsaccades.html">CP Saccades</a></h3>
     <div>
       <ul>
-        <li>CP saccades:
-          <ul>
-            <li>Keep your eyes focused on the middle circle. Click the circle, or press the spacebar to display a the target marker/letter. Using your peripheral vision, locate the corresponding marker in one of the outer circles. Try to click the target marker without moving your eyes away from the central circle. A correct click will result in a green flash, and the central circle will advance to the next target marker. The central circle will flash red if the wrong target marker is clicked. </li>
-            <li>Instead of clicking the targets, you may use other means of identifying the target marker (eg, by placing a stick or physical pointer and verifying the correct target by looking there). In this case, press the space bar to advance the central marker to the next target.</li>
-            <li>Switch to Multicolor markers by selecting "Colorful" in the Color Mode dropdown menu</li>
-          </ul>
-        </li>
-        <li>Space Fixator (Look, Ready, Touch, Back):
-          <ul>
-            <li>Normal CP saccade display</li>
-            <li>Space Fixator with blank dots</li>
-            <li>Space Fixator with numeric labels</li>
-          </ul>
-        </li>
-        <li>Red/Green delete
-          <ul>
-            <li>Use Red/Green glasses</li>
-            <li>Select Red/Green in the Color Mode dropdown menu</li>
-            <li>Advanced Red+Green option for two-tone letter colors</li>
-          </ul>
+        <li>Keep your eyes focused on the middle circle. Click the circle, or press the spacebar to display a the target marker/letter. Using your peripheral vision, locate the corresponding marker in one of the outer circles. Try to click the target marker without moving your eyes away from the central circle. A correct click will result in a green flash, and the central circle will advance to the next target marker. The central circle will flash red if the wrong target marker is clicked. </li>
+        <li>Instead of clicking the targets, you may use other means of identifying the target marker (eg, by placing a stick or physical pointer and verifying the correct target by looking there). In this case, press the space bar to advance the central marker to the next target.</li>
+        <li>Switch to Multicolor markers by selecting "Colorful" in the Color Mode dropdown menu</li>
+      </ul>
 
-        </li>
-
+      <b>Space Fixator (Look, Ready, Touch, Back)</b>
+      <ul>
+        <li>Normal CP saccade display</li>
+        <li>Space Fixator with blank dots</li>
+        <li>Space Fixator with numeric labels</li>
+      </ul>
+      <b>Red/Green delete</b>
+      <ul>
+        <li>Use Red/Green glasses</li>
+        <li>Select Red/Green in the Color Mode dropdown menu</li>
+        <li>Advanced Red+Green option for two-tone letter colors</li>
       </ul>
     </div>
 
-    <h3 id="hart" data-p="p"><a href="hartchart.html">Hart Chart / Decoding</a></h3>
+    <h3 id="hartchart" class="printable interactive"><a href="hartchart.html">Hart Chart / Decoding</a></h3>
     <div>
       <ul>
         <li>Read each letter at a steady pace.</li>
@@ -140,22 +163,20 @@
             <li>If hints are enabled then the corresponding row/column is highlighted when hovering over each code item.</li>
           </ul>
         </li>
-        <li>Printable chart! Layout will be optimized when printing.</li>
       </ul>
     </div>
 
 
-    <h3 id="shapes" data-p="p"><a href="shapechart.html">Shape/Arrow chart</a></h3>
+    <h3 id="shapechart" class="printable"><a href="shapechart.html">Shape/Arrow chart</a></h3>
     <div>
       <ul>
         <li>Toggle between 8x8 grid of shapes or 6x6 grid of arrows</li>
-        <li>Printable chart! Layout will be optimized when printing.</li>
       </ul>
     </div>
 
 
 
-    <h3 id="tracking" data-p="p"><a href="lettertracking.html">Letter Tracking</a></h3>
+    <h3 id="lettertracking" class="printable interactive"><a href="lettertracking.html">Letter Tracking</a></h3>
     <div>
       <ul>
         <li>Find each letter of the alphabet in order.</li>
@@ -174,12 +195,11 @@
         </li>
         <li>"Level 2" option mixes capital and lowercase letters.</li>
         <li>Use red/green glasses with "Red" mode.</li>
-        <li>Printable chart! Layout will be optimized when printing.</li>
       </ul>
     </div>
 
 
-    <h3 id="glyphs"><a href="tranaglyphs.html">Tranaglyphs / Fusion cards</a></h3>
+    <h3 id="tranaglyphs" class="interactive"><a href="tranaglyphs.html">Tranaglyphs / Fusion cards</a></h3>
     <div>
       <ul>
         <li>Tranaglyphs:
@@ -207,7 +227,7 @@
       </ul>
     </div>
 
-    <h3 id="blocks"><a href="blocks.html">Pattern Blocks</a></h3>
+    <h3 id="blocks" class="interactive"><a href="blocks.html">Pattern Blocks</a></h3>
     <div>
       <ul>
         <li>Drag tiles into the play area</li>
@@ -225,7 +245,7 @@
       </ul>
     </div>
 
-    <h3 id="spotmatch"><a href="spotmatch.html">Spot the Match</a></h3>
+    <h3 id="spotmatch" class="interactive"><a href="spotmatch.html">Spot the Match</a></h3>
     <div>
       <ul>
         <li>Spot the matching figure. Each generated pair has one matching image. Click it to generate a new pair of cards.</li>
@@ -242,7 +262,7 @@
     </div>
 
 
-    <h3 id="slaptap" data-p="p"><a href="slaptap.html">Slap Tap</a></h3>
+    <h3 id="slaptap" class="printable"><a href="slaptap.html">Slap Tap</a></h3>
     <div>
       <ul>
         <li>Tap your hand or foot according to the figures
@@ -257,14 +277,13 @@
         <li>Adjust complexity by setting the Level via the dropdown menu.</li>
         <li>Works best on a desktop browser (wide screen)</li>
         <li>Toggle Color mode for added complexity (say the color name as you slap/tap).</li>
-        <li>Printable chart! Layout will be optimized when printing.</li>
       </ul>
 
     </div>
 
 
 
-    <h3 id="fistbump" data-p="p"><a href="fistbump.html">Closed, Open, Flat</a></h3>
+    <h3 id="fistbump" class="printable"><a href="fistbump.html">Closed, Open, Flat</a></h3>
     <div>
       <ul>
         <li>Tap/bump your hands according to the figures
@@ -275,40 +294,40 @@
           </ul>
         </li>
         <li>Toggle Color mode for added complexity (say the color name as you go).</li>
-        <li>Printable chart! Layout will be optimized when printing.</li>
       </ul>
 
     </div>
 
-    <h3 id="colortouch" data-p="p"><a href="colortouch.html">Color Touch</a></h3>
+    <h3 id="colortouch" class="printable"><a href="colortouch.html">Color Touch</a></h3>
     <div>
       <ul>
         <li>Touch matching large reference targets and the smaller task targets simultaneously with your index finger of both hands.</li>
         <li>Match either the color or the direction.</li>
         <li>Say the color name or the direction of the triangles as you go.</li>
         <li>Alternate reference/task fingers with each touch.</li>
-        <li>Printable chart! Layout will be optimized when printing.</li>
       </ul>
     </div>
 
-    <h3 id="lettersearch" data-p="p"><a href="lettersearch.html">Letter Search</a></h3>
-    <ul>
-      <li>Wear your red/green glasses as guided by your vision therapist.</li>
-      <li>Select the matching letters in alphabetical order.</li>
-      <li>If any letters appear to fade or disappear, try any anti-supperssion techniques that help you to engage both eyes.</li>
-      <li>Discontinue this activity/ if you experience consistent double vision and are unable to resolve this as you play.</li>
-    </ul>
-    <b>Monocular Fixation in Binocular Field</b>
-    <ul>
-      <li>Use the Settings panel to pick a desired color.</li>
-      <li>While both eyes will see the screen, only one eye will see the letters.</li>
-      <li>Select matching letters in alphabetical order.</li>
-    </ul>
-    <b>Alternate Markers</b>
-    <ul>
-      <li>Use the Settings panel to select the desired character set.</li>
-      <li>If the number set is paired with an alphabet set, match the number corresponding to the letter (A=1, B=2, etc).</li>
-    </ul>
+    <h3 id="lettersearch" class="printable interactive"><a href="lettersearch.html">Letter Search</a></h3>
+    <div>
+      <ul>
+        <li>Wear your red/green glasses as guided by your vision therapist.</li>
+        <li>Select the matching letters in alphabetical order.</li>
+        <li>If any letters appear to fade or disappear, try any anti-supperssion techniques that help you to engage both eyes.</li>
+        <li>Discontinue this activity/ if you experience consistent double vision and are unable to resolve this as you play.</li>
+      </ul>
+      <b>Monocular Fixation in Binocular Field</b>
+      <ul>
+        <li>Use the Settings panel to pick a desired color.</li>
+        <li>While both eyes will see the screen, only one eye will see the letters.</li>
+        <li>Select matching letters in alphabetical order.</li>
+      </ul>
+      <b>Alternate Markers</b>
+      <ul>
+        <li>Use the Settings panel to select the desired character set.</li>
+        <li>If the number set is paired with an alphabet set, match the number corresponding to the letter (A=1, B=2, etc).</li>
+      </ul>
+    </div>
     <hr />
     <br />
     <br />
@@ -330,9 +349,22 @@
     let toc = document.querySelector("#toc");
 
     for (let h of document.querySelectorAll("h3")) {
-      let li = document.createElement("li");
       let a = h.querySelector("a");
-      li.innerHTML = '<a href="#' + h.id + '">' + a.innerText + "</a>" + (h.dataset.p ? " (printable)" : "");
+      let bimg = document.createElement("img");
+      bimg.src = "img/icon_" + h.id + ".svg";
+      bimg.alt = a.innerText;
+      let li = document.createElement("li");
+      li.append(bimg);
+
+      li.innerHTML += '<a href="#' + h.id + '">' + a.innerText + "</a>";
+      if (h.className) {
+        let append = " (" + [...h.classList].join("/") + ")";
+        let shorter = " (" + [...h.classList].map(c=>c.slice(0,1)).join(", ") + ")";
+
+        li.innerHTML += shorter;
+        h.innerHTML += append;
+        
+      }
       toc.append(li);
     }
 
