--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <style>
     #abouttext {
-      font-size: min(18pt,5vw);
+      font-size: min(18pt, 5vw);
       margin: 0 1em;
     }
 
@@ -77,7 +77,8 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      margin-bottom:0.5em;
+      margin-bottom: 0.5em;
+      padding-left: 1em;
 
       & li {
         display: block;
@@ -93,10 +94,11 @@
     }
 
     .legend {
-      margin:0.5em 1em;
+      margin: 0.5em 1em;
     }
+
     h4 {
-      margin-bottom:0.5em;
+      margin-bottom: 0.5em;
     }
   </style>
 </head>
@@ -359,11 +361,11 @@
       li.innerHTML += '<a href="#' + h.id + '">' + a.innerText + "</a>";
       if (h.className) {
         let append = " (" + [...h.classList].join("/") + ")";
-        let shorter = " (" + [...h.classList].map(c=>c.slice(0,1)).join(", ") + ")";
+        let shorter = " (" + [...h.classList].map(c => c.slice(0, 1)).join(", ") + ")";
 
         li.innerHTML += shorter;
         h.innerHTML += append;
-        
+
       }
       toc.append(li);
     }
